# math.slang

./: .gitignore  .gitmodules  README.md  flake.nix  pyproject.toml
.github/workflows/: docs-pages.yml
docs/: api.rst  conf.py  index.md  usage.md
libs/glm/tests/: test_quaternion.py
libs/glm_slang/: pyproject.toml
libs/glm_slang/src/glm_slang/: __init__.py  conversion.py
libs/glm_slang/src/glm_slang/slang/: glm.slang  quaternion.slang
libs/glm_slang/tests/: common.py  test_conversion.py  test_quaternion.py
src/glm_slang/: __init__.py
src/math_slang/: __main__.py  conversion.py
tests/: test_conversion.py  test_quaternion.py
tests/glm_slang/: pyproject.toml
tests/glm_slang/src/glm_slang_test/: __init__.py  common.py  test_conversion.py  test_quaternion.py
tests/slang/: glm_test.slang  test_conversion.slang  test_quaternion.slang
