[project]
name = "glm-slang-workspace"
version = "0.1.0"
description = "Math utils for Slang"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["glm-slang"]

[dependency-groups]
dev = []

[tool.uv.workspace]
members = ["libs/*"]

[tool.uv.sources]
glm-slang = { workspace = true }
spm = { path = "external/spm/libs/spm", editable = true }
