[project]
name = "glm-slang-workspace"
version = "0.1.0"
description = "Math utils for Slang"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["glm-slang", "glm-slang-test"]

[dependency-groups]
dev = ["pytest>=9.0.3", "black>=26.3.1"]

[tool.uv.workspace]
members = ["libs/*", "tests/*"]

[tool.uv.sources]
glm-slang = { workspace = true }
glm-slang-test = { workspace = true }
spm-slang = { path = "external/spm.slang/libs/spm_slang", editable = true }

[tool.pytest]
minversion = "9.0"
testpaths = ["tests/glm_slang/src/glm_slang_test"]
