[project]
name = "glm-slang"
version = "0.1.0"
description = "Math utils for Slang"
requires-python = ">=3.12"
dependencies = ["pyglm>=2.8.3", "slangpy>=0.41.0", "spm_slang==0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=9.0.3", "black>=26.3.1"]
